manifests/ax-deployment.yaml
# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Namespace
metadata:
  name: ax
---
apiVersion: ate.gke.io/v1alpha1
kind: WorkerPool
metadata:
  name: ax-workerpool
  namespace: ax
spec:
  replicas: 5
  containers:
    - name: "ax"
      image: gcr.io/ax-container-images/ax:latest
      command: ["ax", "serve"]
      ports:
      - containerPort: 8494
      env:
        - name: GEMINI_API_KEY
          value: "YOUR_API_KEY" # TODO: Use envFrom once it's available.
        - name: AX_SUBSTRATE
          value: "1"
---
apiVersion: ate.gke.io/v1alpha1
kind: ActorTemplate
metadata:
  name: ax-template
  namespace: ax
spec:
  workerPoolRef:
    name: ax-workerpool
  snapshotsConfig:
    location:
      bucket: YOUR_BUCKET
      folder: ax
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: ax-router
  namespace: ax
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: ax-router-config
  namespace: ax
data:
  envoy.yaml: |
    admin:
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9901
    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 8080
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              stream_idle_timeout: 0s
              generate_request_id: true
              access_log:
              - name: envoy.access_loggers.stdout
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              http_filters:
              - name: envoy.filters.http.ext_authz
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                  grpc_service:
                    envoy_grpc:
                      cluster_name: epp-cluster
                    timeout: 5s
                  transport_api_version: V3
                  with_request_body:
                    max_request_bytes: 1048576
                    allow_partial_message: true
                    pack_as_bytes: true
                  failure_mode_allow: false
              - name: envoy.filters.http.dynamic_forward_proxy
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
                  dns_cache_config:
                    name: dynamic_forward_proxy_cache_config
                    dns_lookup_family: V4_ONLY
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                name: ax-route
                virtual_hosts:
                - name: ax-virtual-host
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: dynamic_forward_proxy_cluster
                      timeout: 0s
                      idle_timeout: 0s # Support uninterrupted persistent stream socket bounds smoothly
                    typed_per_filter_config:
                      envoy.filters.http.dynamic_forward_proxy:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.PerRouteConfig
                        host_rewrite_header: x-backend-ip
      clusters:
      - name: dynamic_forward_proxy_cluster
        lb_policy: CLUSTER_PROVIDED
        cluster_type:
          name: envoy.clusters.dynamic_forward_proxy
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
            dns_cache_config:
              name: dynamic_forward_proxy_cache_config
              dns_lookup_family: V4_ONLY
            allow_insecure_cluster_options: true
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}
      - name: epp-cluster
        connect_timeout: 0.25s
        type: STATIC
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}
        load_assignment:
          cluster_name: epp-cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 50051
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ax-router
  namespace: ax
  labels:
    app: ax-router
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ax-router
  template:
    metadata:
      labels:
        app: ax-router
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      serviceAccount: ax-router
      containers:
      - name: envoy
        image: envoyproxy/envoy:v1.30-latest
        command:
          - /usr/local/bin/envoy
          - -c
          - /etc/envoy/envoy.yaml
          - --component-log-level
          - upstream:debug,router:debug,ext_authz:debug
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 9901
          name: admin
        volumeMounts:
        - name: envoy-config
          mountPath: /etc/envoy
      - name: axepp
        image: gcr.io/ax-container-images/axepp:latest
        args:
          - "--grpc-server-cred-bundle=/run/servicedns.podcert.gke.io/credential-bundle.pem"          
        ports:
        - containerPort: 50051
          name: grpc
        volumeMounts:
        - name: "servicedns"
          mountPath: "/run/servicedns.podcert.gke.io"
      volumes:
      - name: envoy-config
        configMap:
          name: ax-router-config
      - name: "servicedns"
        projected:
          sources:
          - podCertificate:
              signerName: servicedns.podcert.gke.io/identity
              keyType: ECDSAP256
              credentialBundlePath: credential-bundle.pem
